replace deprecated jetty with gretty plugin, add unit tests

--- a/src/main/webapp/index.zul
+++ b/src/main/webapp/index.zul
@@ -1,4 +1,5 @@
 <zk>
-	<textbox></textbox>
-	<button label="asdf"/>
+	<textbox id="testInput"/>
+	<button id="testButton" label="test" 
+			onClick='testInput.setValue("Test Successful")'/>
 </zk>
