--- a/src/main/webapp/css-toggle-switch/css/cmn-toggle-custom.css
+++ b/src/main/webapp/css-toggle-switch/css/cmn-toggle-custom.css
@@ -3,5 +3,6 @@
 }
 
 input.large-icon + label:before, input.large-icon + label:after {
-  font-size: 60px;
+  font-size: 50px;
+  font-family: FontAwesome;
 }
