--- a/src/main/webapp/orgchart/css/orgchart-vertical.css
+++ b/src/main/webapp/orgchart/css/orgchart-vertical.css
@@ -1,32 +1,37 @@
+/*vertical nodes*/
 .orgchart li.vertical > ul {
-    display: flex;
     flex-direction: column;
     align-items: flex-start;
     margin: 0 5px;
-}
-
-.orgchart li.vertical > .nodecontent {
-    min-width: calc(100% - 10px);
-}
-
-.orgchart li.vertical > .nodecontent::after {
-    bottom: -20px;
-    border-left: none;
-    border-right: 2px solid #CCCCCC;
-    border-bottom: 2px solid #CCCCCC;
-    border-bottom-right-radius: 7px;
-    left: 10px;
-    right: 50%;
-    width: auto;
+    position: relative;
 }
 
 .orgchart li.vertical > ul > li > .nodecontent {
     margin: 10px 0 0 10px;
 }
 
+/*vertical connectors*/
+.orgchart li.vertical > ul::before {
+    box-sizing: border-box;
+    content: '';
+    position: absolute;
+    top: -2px;
+    left: 10px;
+    height: 10px;
+    width: calc(50% - 19px);
+    border-top: 2px solid #CCCCCC;
+}
+
+.orgchart li.vertical > .nodecontent::after {
+    border-width: 0 2px 2px 0;
+    border-bottom-right-radius: 7px;
+    width: 10px;
+    left: auto;
+    right: calc(50% - 1px);
+}
+
 .orgchart li.vertical > ul > li::before {
-    border: none;
-    border-left: 2px solid #CCCCCC;
+    border-width: 0 0 0 2px;
     left: 0px;
     height: 100%;
     width: 10px;
@@ -35,26 +40,24 @@
 .orgchart li.vertical > ul > li:first-child::before {
     top: -2px;
     height: calc(100% + 2px);
-    border-top: 2px solid #CCCCCC;
+    border-top-width: 2px;
     border-top-left-radius: 7px;
 }
 
 .orgchart li.vertical > ul > li:last-child::before {
-    height: calc(50% + 1px);
-    border-bottom: 2px solid #CCCCCC;
+    height: calc(50% + 6px);
+    border-bottom-width: 2px;
     border-bottom-left-radius: 7px;
 }
 
-
 .orgchart li.vertical > ul > li > .nodecontent::before {
-    height: 20px;
-    width: 10px;
+    height: 2px;
+    width: 8px;
     top: calc(50% - 1px);
-    left: -10px;
-    border: none;
-    border-top: 2px solid #CCCCCC;
+    left: -8px;
+    border-width: 2px 0 0 0;
 }
 
 .orgchart li.vertical > ul > li:last-child > .nodecontent::before {
-    border: none;
+    display: none;
 }
