--- a/src/main/webapp/orgchart/css/orgchart.css
+++ b/src/main/webapp/orgchart/css/orgchart.css
@@ -1,19 +1,19 @@
+/*chart nodes*/
 .orgchart {
     display: inline-block;
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
-ul.orgchart, .orgchart ul {
+.orgchart, .orgchart ul {
     padding: 0;
     margin: 0;
 }
 
 .orgchart ul {
     display: flex;
-    justify-content: center;
 }
 
-.orgchart li, .orgchart .root {
+.orgchart li {
     display: flex;
     flex-direction: column;
     position: relative;
@@ -25,56 +25,63 @@ ul.orgchart, .orgchart ul {
     margin: 20px 5px;
 }
 
-.orgchart li:not(:only-child)::before {
+.orgchart .collapsed > ul {
+    display: none;
+}
+
+/*connections*/
+.orgchart li::before,
+.orgchart .nodecontent::after,
+.orgchart .nodecontent::before {
+    box-sizing: border-box;
     content: '';
     position: absolute;
-    border-top: 2px solid #CCCCCC;
+    z-index: -1;
+    border: 0px solid #CCCCCC;
+}
+
+.orgchart li:not(:only-child)::before {
+    border-top-width: 2px;
     width: 100%;
     height: 20px;
     top: 0px;
-    z-index: -1;
 }
 
 .orgchart li:first-child::before {
     width: calc(50% + 1px);
     right: 0;
-    border-left: 2px solid #CCCCCC;
+    border-left-width: 2px;
     border-top-left-radius: 7px;
 }
 
 .orgchart li:last-child::before {
     width: calc(50% + 1px);
-    border-right: 2px solid #CCCCCC;
+    border-right-width: 2px;
     border-top-right-radius: 7px;
 }
 
 .orgchart .nodecontent::after,
 .orgchart .nodecontent::before {
-    content: '';
-    position: absolute;
-    border-left: 2px solid #CCCCCC;
-    width: 20px;
+    border-left-width: 2px;
+    width: 2px;
     height: 20px;
     left: calc(50% - 1px);
-    bottom: -20px;
-    z-index: -1;
 }
 
 .orgchart .nodecontent::before {
     top: -20px;
 }
+.orgchart .nodecontent::after {
+    bottom: -20px;
+}
 
 .orgchart li:first-child:not(:only-child) > .nodecontent::before,
 .orgchart li:last-child:not(:only-child) > .nodecontent::before {
-    border-left: none;
+    border-left-width: 0px;
 }
 
 .orgchart .leaf > .nodecontent::after,
 .orgchart .root > .nodecontent::before,
 .orgchart .collapsed > .nodecontent::after {
-    display: none;
-}
-
-.orgchart .collapsed > ul {
     display: none;
 }
