--- a/src/main/webapp/orgchart/orgchart-bigger.zul
+++ b/src/main/webapp/orgchart/orgchart-bigger.zul
@@ -1,5 +1,6 @@
 <?style src="css/orgchart.css"?>
 <?style src="css/simple.css"?>
+<!--<?style src="css/debug.css"?>-->
 <zk>
 	<div xmlns="xhtml" class="centered">
 		<ul class="orgchart">
