--- a/src/main/webapp/orgchart/orgchart-model.zul
+++ b/src/main/webapp/orgchart/orgchart-model.zul
@@ -1,6 +1,7 @@
 <?style src="css/orgchart.css"?>
 <?style src="css/orgchart-vertical.css"?>
 <?style src="css/simple.css"?>
+<!--<?style src="css/debug.css"?>-->
 <?component name="orgchart" templateURI="template/orgchart-template.zul"?>
 <zk>
 	<div sclass="centered" viewModel="@id('vm') @init('zk.example.template.orgchart.OrgChartViewModel')">
