--- a/src/main/webapp/orgchart/orgchart-full.zul
+++ b/src/main/webapp/orgchart/orgchart-full.zul
@@ -1,6 +1,7 @@
 <?style src="css/orgchart.css"?>
 <?style src="css/orgchart-vertical.css"?>
 <?style src="css/full.css"?>
+<!--<?style src="css/debug.css"?>-->
 <?component name="orgchart" templateURI="template/orgchart-template.zul"?>
 <zk xmlns:w="client">
 	<script>
