disable debug styles

--- a/src/main/webapp/orgchart/orgchart-model-collapsible.zul
+++ b/src/main/webapp/orgchart/orgchart-model-collapsible.zul
@@ -1,7 +1,7 @@
 <?style src="css/orgchart.css"?>
 <?style src="css/orgchart-vertical.css"?>
 <?style src="css/simple.css"?>
-<?style src="css/debug.css"?>
+<!--<?style src="css/debug.css"?>-->
 <?component name="orgchart" templateURI="template/orgchart-template.zul"?>
 <zk xmlns:w="client">
 	<script>
